# blendwerk

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
docs/pages/: config.yaml  imprint.html  index.html  theme.css
docs/pages/assets/: demo.webm
docs/pages/sections/: footer.html  hero.html  highlights.html  quick-start.html
docs/pages/styles/: layout.css  theme.css
docs/vhs/: README.md  demo.tape  record.sh
skills/blendwerk/: SKILL.md
skills/blendwerk/references/: cli.md  mock-structure.md  request-logs.md
src/: frontmatter.rs  main.rs  request_logger.rs  routes.rs  server.rs  tls.rs  watcher.rs
todos/: 01kx0ye4zr5n9ks4r37e99jg9x-readme-405-contradiction.md
