[package]
name = "blendwerk"
version = "1.0.0"
edition = "2024"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
notify = "8.2.0"
pid1 = "0.1.5"
rcgen = "0.14.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ulid = "1.2.1"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
